# pluto_robot

./: README.md  \
pluto_2dnav/: CMakeLists.txt  package.xml
pluto_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  general.yaml  global_costmap_params.yaml  local_costmap_params.yaml
pluto_2dnav/launch/: move_base.launch
pluto_2dnav/rviz/: config.rviz
pluto_cartographer/: CMakeLists.txt  package.xml
pluto_cartographer/config/: demo_2d.rviz  pluto.lua  pluto_localization.lua  pluto_mapping.lua
pluto_cartographer/launch/: assets_writer_pluto.launch  demo_pluto.launch  demo_pluto_localization.launch  offline_pluto.launch  pluto.launch
pluto_description/: CMakeLists.txt  package.xml
pluto_description/launch/: show_pluto.launch
pluto_description/rviz/: config.rviz
pluto_description/urdf/: castor.xacro  pluto.urdf  pluto.urdf.autosave  pluto.xacro  rrbot.xacro  wheel.xacro
pluto_joypad/: CMakeLists.txt  package.xml
pluto_joypad/config/: joy_node_config.yaml
pluto_joypad/include/: pluto_joypad.hpp
pluto_joypad/launch/: node.launch
pluto_joypad/src/: pluto_joypad.cpp  pluto_joypad_node.cpp
pluto_launch/: CMakeLists.txt  package.xml
pluto_launch/launch/: hector_slam.launch  mapping_default.launch  raspberry.launch  realsense.launch  realsense_to_pointcloud.launch  robot.launch
pluto_map/: CMakeLists.txt  package.xml
pluto_map/data/: casa-kr-map.pgm  casa-kr-map.yaml  casa-kr-new-costmap.bag.pbstream  casa-kr-new-map.pgm  casa-kr-new-map.yaml  casa-kr-new.bag.pbstream  casa-kr.bag.pbstream  casa_kr_map.yaml  imperial-new.bag.pbstream
pluto_motors_driver/: .gitignore  CMakeLists.txt  package.xml
pluto_motors_driver/config/: controller_config.yaml  diff_drive_controller_config.yaml
pluto_motors_driver/include/: pluto_motors_driver.hpp
pluto_motors_driver/launch/: diff_drive_node.launch  node.launch  start_controller.launch
pluto_motors_driver/src/: pluto_motors_driver.cpp  pluto_motors_driver_node.cpp
pluto_msgs/: CMakeLists.txt  package.xml
pluto_msgs/msg/: MotorsPower.msg
pluto_msgs/srv/: SetMotorsPower.srv
pluto_robot_localization/: CMakeLists.txt  package.xml
pluto_robot_localization/config/: config.yaml
pluto_robot_localization/launch/: start.launch  start.launch.autosave
pluto_slam/: CMakeLists.txt  package.xml
pluto_slam/launch/: hector_slam_rplidar.launch  mapping_default.launch
rosinstall/: rosinstall
scripts/: install_workspace.zsh  rosconsole.yaml  setup_pluto_workspace.zsh
